Fixed name too long

--- a/Khoolood/src/app/home/updates/updates.component.scss
+++ b/Khoolood/src/app/home/updates/updates.component.scss
@@ -1,4 +1,4 @@
 ion-avatar {
-    width: 60px;  
-    height: 60px;  
+    width: 50px;  
+    height: 50px;  
 }
