--- a/Khoolood/src/app/obituary-detail/obituary-detail.page.scss
+++ b/Khoolood/src/app/obituary-detail/obituary-detail.page.scss
@@ -16,33 +16,34 @@ ion-toolbar {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: calc(250px + var(--ion-safe-area-top));
+  height: calc(300px + var(--ion-safe-area-top));
   background: linear-gradient(to bottom, #1e3260, #2f6590);
 
   .loader {
-      top: 50%;
+    top: 50%;
   }
-}
 
-.obituary-background img {
-  width: 140px;
-  border-radius: 50%;
-  top: 30px;
-  position: relative;
-}
+  img {
+    width: 140px;
+    border-radius: 50%;
+    top: 55px;
+    position: relative;
+  }
 
-.obituary-background h2 {
-  position: absolute;
-  top: 10px;
-  color: white;
-  font-size: 20px;
-}
+  h2 {
+    position: absolute;
+    top: 30px;
+    color: white;
+    font-size: 20px;
+    width: 85%;
+  }
 
-.obituary-background p {
-  position: absolute;
-  top: 45px;
-  color: white;
-  font-size: 13px;
+  p {
+    position: absolute;
+    top: 90px;
+    color: white;
+    font-size: 13px;
+  }
 }
 
 h3 {
@@ -52,7 +53,7 @@ h3 {
 }
 
 ion-label {
-  color: #8E8E8E;
+  color: #8e8e8e;
   font-size: 14px;
 }
 
